Ben's first commit

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
         </div>
     </main>
 
+    <article>
+        <h2>Ben's middle section header </h2>
+    </article>
+
     <footer>
         <div class="footer-size">
             <div class="footer-content">
