--- a/signin.html
+++ b/signin.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign-in</title>
+    <link rel="stylesheet" href="./Static/signin.css">
 </head>
 <body>
+
+    <img src="./Static/Images/Group 15@2x.png" alt="">
+
+    <div class="form-container">
+        <div class="inputs">
+            <input type="text">
+            <input type="text">
+            <input type="text">
+            <button></button>
+        </div>
+    </div>
+
+    <div class="social-container">
+        <p>Or Sign in with social platforms</p>
+        <a href="#" class="social"><img src="./Static/Images/Path 151@2x.png" alt=""></a>
+        <a href="#" class="social"><img src="./Static/Images/Path 152@2x.png" alt=""></a>
+        <a href="#" class="social"><img src="./Static/Images/Path 151@2x.png" alt=""></a>
+        <a href="#" class="social"><img src="./Static/Images/Path 152@2x.png" alt=""></a>
+    </div>
+
 
 </body>
 </html>
