--- a/signup.html
+++ b/signup.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign-up</title>
+    <link rel="stylesheet" href="./static/signup.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
-    
+
+
+    <!-- <div class="flexbox form-container"> -->
+    <div class="flexbox inputs">
+        <h1>Sign Up</h1>
+
+        <input type="text">
+        <input type="text">
+        <input type="text">
+        <button>Sign Up</button>
+    </div>
+    <!-- </div> -->
+
+
+    <div class="flexbox social-container">
+        <p>Or Sign up with social platforms</p>
+        <div class="flexbox social-links">
+
+            <div class="social-box">
+                <a href="#" class="social"><img src="./CRM-Main/Path 151@2x.png" alt=""></a>
+            </div>
+
+            <div class="social-box">
+                <a href="#" class="social"><img src="./CRM-Main/Path 152@2x.png" alt=""></a>
+            </div>
+
+            <div class="social-box">
+                <a href="#" class="social"><img src="./CRM-Main/Path 151@2x.png" alt=""></a>
+            </div>
+
+            <div class="social-box">
+                <a href="#" class="social"><img src="./CRM-Main/Path 152@2x.png" alt=""></a>
+            </div>
+        </div>
+    </div>
+
+
+    <img class="illustration" src="./CRM-Main/Group 10@2x.png">
+
 </body>
+
 </html>
