--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Double Tap - Home</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="./static/landing.css">
     <link rel="stylesheet" href="./static/articles.css">
@@ -32,7 +34,7 @@
             <a href="#" class="secondary-buttons try-it">Try it Free</a>
         </section>
     </header>
-    <main>
+    <main class="banner-page">
         <div class="about-container">
             <div class="main-writing">
                 <p class="company-motto1">Focus on</p>
