--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<html lang="en-US">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,8 +10,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="./static/landing.css">
     <link rel="stylesheet" href="./static/articles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="./static/landing.css">
 
     <title>Double Tap - Home</title>
 
@@ -45,7 +45,7 @@
             </div>
             <div class="website-guide-buttons">
                 <p class="signup-free"><a href="#">Sign Up Free &nbsp>></a></p>
-                <p class="chat-button"><a href="#">Chat with us</a></p>
+                <p class="chat-button"><a href="#">&#128172 &nbsp Chat with us</a></p>
             </div>
             <div class="existing-user-container">
                 <p class="existing-user-text">Already using <strong>Double</strong>Tap? <a href="#"><strong>Sign
@@ -69,15 +69,15 @@
     </article>
 
     <footer>
-        <div class="footer-size">
-            <div class="footer-content">
+        <div class="footer-content">
+            <div class="footer-grid">
                 <div class="footer-text-container">
                     <p>Try Double Tap Today!</p>
                     <p>Let's Get Started</p>
                 </div>
                 <div class="get-started-container">
-                    <p><a href="">Get Started</a></p>
-                    <p><a href="">Chat With Us</a></p>
+                    <p><a href="" class="get-started-button">Get Started</a></p>
+                    <p><a href="" class="final-chat-button">&#128172 &nbsp Chat With Us</a></p>
                 </div>
                 <div class="footer-final-line-container">
                     <p>Free 14 day trial</p>
