Standard monitor layout completed. Added an image to CRM-Main folder.

--- a/signup.html
+++ b/signup.html
@@ -6,49 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-up</title>
+    <script src="https://use.fontawesome.com/2d88678d82.js"></script>
     <link rel="stylesheet" href="./static/signup.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <div class="column-left">
 
-
-    <!-- <div class="flexbox form-container"> -->
-    <div class="flexbox inputs">
         <h1>Sign Up</h1>
-
-        <input type="text">
-        <input type="text">
-        <input type="text">
-        <button>Sign Up</button>
-    </div>
-    <!-- </div> -->
-
-
-    <div class="flexbox social-container">
-        <p>Or Sign up with social platforms</p>
-        <div class="flexbox social-links">
-
-            <div class="social-box">
-                <a href="#" class="social"><img src="./CRM-Main/Path 151@2x.png" alt=""></a>
-            </div>
-
-            <div class="social-box">
-                <a href="#" class="social"><img src="./CRM-Main/Path 152@2x.png" alt=""></a>
-            </div>
-
-            <div class="social-box">
-                <a href="#" class="social"><img src="./CRM-Main/Path 151@2x.png" alt=""></a>
-            </div>
-
-            <div class="social-box">
-                <a href="#" class="social"><img src="./CRM-Main/Path 152@2x.png" alt=""></a>
-            </div>
+        <input type="text" class="username">
+        <input type="text" class="email">
+        <input type="text" class="passwd">
+        <button type="submit" class="signup-button">Sign Up</button>
+        <p><strong> Or Sign up with social platforms</strong></p>
+        <div class="socials">
+            <button type="submit"></button>
+            <button type="submit"></button>
+            <button type="submit"></button>
+            <button type="submit"></button>
         </div>
     </div>
-
-
-    <img class="illustration" src="./CRM-Main/Group 10@2x.png">
+    <div class="column-right">
+        <div class="imageframe">
+            <img src="./CRM-Main/Group 10@2x.png" alt="illustration">
+        </div>
+    </div>
 
 </body>
 
