Added mobile screen-size response

--- a/signin.html
+++ b/signin.html
@@ -32,6 +32,7 @@
         <input type="text" class="email">
         <input type="text" class="passwd">
         <button type="submit" class="signin-button"><strong>Sign In</strong></button>
+        <a href="./signup.html">New here? Sign up now!</a>
         <p><strong> Or Sign in with social platforms</strong></p>
         <div class="socials">
             <button type="submit"></button>
