Final updates to main articles

--- a/how.html
+++ b/how.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./static/articles.css">
     <title>Document</title>
 </head>
+
 <body>
 
 
+    <article class="middle-how">
+        <div class="article-text">
+            <h3>How It Works</h3><br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates aspernatur laudantium, nostrum modi
+            ex voluptatum quaerat quia? Adipisci autem ratione quam, veniam laudantium a soluta! Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora modi delectus vel excepturi optio magnam?</p>
+        </div>
+
+        <div class="article-info article-radius">
+            <div class="info-pic">
+                <img src="./CRM-Main/Collect-info.png" alt="Article info image could not display...">
+            </div>
+            <div class="info-how">
+                <h3>Collect Useful Info</h3><br>
+                <p>Deliver the world of payment options and seamless checkout experiences, making it easy for your
+                    customers to pay you for your products and services.</p>
+            </div>
+        </div>
+
+        <div class="article-text">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, modi optio blanditiis corrupti
+            earum impedit ipsum animi numquam vero possimus consequatur non alias ab eos? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem incidunt optio exercitationem nesciunt dolore accusamus, ad adipisci iusto consequatur commodi facilis iure, dignissimos quibusdam quam unde voluptates labore perspiciatis quasi!</p>
+        </div>
+
+        <div class="article-info article-radius">
+            <div class="info-pic">
+                <img src="./bens-screenshots/how-image2.png" alt="Article info image could not display...">
+            </div>
+            <div class="info-how">
+                <div class="info-container">
+                    <h3>Get Paid Sooner</h3><br>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam, ab itaque eligendi, obcaecati nostrum et pariatur laudantium distinctio quos sunt velit, similique rerum aut fugiat! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad dolorem a labore, soluta nihil quae quis modi quasi asperiores, voluptas dicta possimus earum facilis officia! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias quidem aliquid deserunt rem eveniet iste.</p>
+                </div>
+            </div>
+        </div>
+    </article>
+
 </body>
+
 </html>
