--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="#" class="nav-buttons support">Support</a>
         </nav>
         <section class="signin-try">
-            <a href="#" class="secondary-buttons sign-in">Sign In</a>
+            <a href="./signin.html" class="secondary-buttons sign-in">Sign In</a>
             <a href="#" class="secondary-buttons try-it">Try it Free</a>
         </section>
     </header>
@@ -44,7 +44,7 @@
                     customer experience - without the technnical hurdles.</p>
             </div>
             <div class="website-guide-buttons">
-                <p class="signup-free"><a href="#">Sign Up Free &nbsp>></a></p>
+                <p class="signup-free"><a href="./signup.html">Sign Up Free &nbsp>></a></p>
                 <p class="chat-button"><a href="#">&#128172 &nbsp Chat with us</a></p>
             </div>
             <div class="existing-user-container">
