Added links on index.html

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
             <a href="#" class="nav-buttons home-button">Home</a>
             <a href="#" class="nav-buttons features">Features</a>
             <a href="#" class="nav-buttons pricing">Pricing</a>
-            <a href="#" class="nav-buttons how-button">How it Works</a>
+            <a href="./how.html" class="nav-buttons how-button">How it Works</a>
             <a href="#" class="nav-buttons support">Support</a>
         </nav>
         <section class="signin-try">
-            <a href="#" class="secondary-buttons sign-in">Sign In</a>
-            <a href="#" class="secondary-buttons try-it">Try it Free</a>
+            <a href="./signin.html" class="secondary-buttons sign-in">Sign In</a>
+            <a href="./signup.html" class="secondary-buttons try-it">Try it Free</a>
         </section>
     </header>
     <main class="banner-page">
