--- a/how.html
+++ b/how.html
@@ -7,10 +7,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./static/articles.css">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./static/articles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="./static/landing.css">
 </head>
 
 <body>
-
+    <header>
+        <nav class="navbar">
+            <img src="./CRM-Main/Logo.png" class="logo" alt="crm main logo">
+            <a href="#" class="nav-buttons home-button">Home</a>
+            <a href="#" class="nav-buttons features">Features</a>
+            <a href="#" class="nav-buttons pricing">Pricing</a>
+            <a href="#" class="nav-buttons how-button">How it Works</a>
+            <a href="#" class="nav-buttons support">Support</a>
+        </nav>
+        <section class="signin-try">
+            <a href="./signin.html" class="secondary-buttons sign-in">Sign In</a>
+            <a href="#" class="secondary-buttons try-it">Try it Free</a>
+        </section>
+    </header>
+    <main class="banner-page">
+        <div class="about-container">
+            <div class="main-writing">
+                <p class="company-motto1">Focus on</p>
+                <p class="company-motto1">Your Business</p>
+                <p class="company-hook">Let Us Handle Everything Else</p>
+                <p class="company-promise">Subscription Billing, powered with revenue retention tools and a seamless
+                    customer experience - without the technnical hurdles.</p>
+            </div>
+            <div class="website-guide-buttons">
+                <p class="signup-free"><a href="./signup.html">Sign Up Free &nbsp>></a></p>
+                <p class="chat-button"><a href="#">&#128172 &nbsp Chat with us</a></p>
+            </div>
+            <div class="existing-user-container">
+                <p class="existing-user-text">Already using <strong>Double</strong>Tap? <a href="#"><strong>Sign
+                            In</strong></a></p>
+            </div>
+            <div class="final-line-container">
+                <p>Free 14 day trial</p>
+                <p>&#8226;</p>
+                <p>Manage Customers in Minutes</p>
+                <p>&#8226;</p>
+                <p>Cancel at Anytime</p>
+            </div>
+        </div>
+        <div class="checkerboard">
+            <img src="./CRM-Main/Header-Side.png" alt="">
+        </div>
+    </main>
 
     <article class="middle-how">
         <div class="article-text">
@@ -48,6 +98,27 @@
         </div>
     </article>
 
+    <footer>
+        <div class="footer-content">
+            <div class="footer-grid">
+                <div class="footer-text-container">
+                    <p>Try Double Tap Today!</p>
+                    <p>Let's Get Started</p>
+                </div>
+                <div class="get-started-container">
+                    <p><a href="" class="get-started-button">Get Started</a></p>
+                    <p><a href="" class="final-chat-button">&#128172 &nbsp Chat With Us</a></p>
+                </div>
+                <div class="footer-final-line-container">
+                    <p>Free 14 day trial</p>
+                    <p>&#8226;</p>
+                    <p>Manage Customers in Minutes</p>
+                    <p>&#8226;</p>
+                    <p>Cancel at Anytime</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
